# pypacktrends

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: default.md
.github/workflows/: cd.yml  ci.yml  dbt-cd.yml  dbt-ci.yml  dbt-cleanup.yml  dbt-pypi.yml  publish.yml  pulumi-preview-prod.yml  pulumi-up-prod.yml  smokeshow.yml  sync.yml  test.yml  weekly-pipeline.yml
alloy/: config.alloy
backend/: .dockerignore  .sqlfluff  Dockerfile  README.md  alembic.ini  chart.html  embed.html  pyproject.toml
backend/app/: chart.py  main.py  metrics.py  models.py  normalization.py  publish.py  sync.py  utils.py
backend/app/alembic/: README  env.py  utils.py
backend/app/alembic/versions/: eb3ad385519a_init_database.py  eb3ad385519a_init_database_downgrade.sql  eb3ad385519a_init_database_upgrade.sql
backend/app/analytics/: posthog.py
backend/app/core/: config.py  db.py  logger.py  logger_config.json
backend/app/static/css/: styles.css
backend/app/static/js/: search.js  theme.js
backend/app/templates/components/: package_line_item.html
backend/app/templates/fragments/: chart.html  package_line_item.html  package_list.html  package_search_input.html  search_input.html
backend/app/templates/home/: index.html  packages.html  search.html
backend/app/templates/macros/: packages.html  search.html
backend/app/templates/pages/: home.html  package_search_results.html  search_results.html
backend/app/templates/shared/: _layout.html
backend/app/tests/: conftest.py  test_analytics_posthog.py  test_chart.py  test_models.py  test_sync.py  test_utils.py
backend/app/tests/alembic/: test_utils.py
backend/app/tests/core/: test_db.py
backend/app/views/: main.py
backend/app/views/routes/: home.py  packages.py  search.py
backend/scripts/: run_migrations.sh  sqlfluff.sh  start_backend.sh
caddy/: Caddyfile  Dockerfile
datasette/: metadata.yml
dbt/: .gitignore  .sqlfluff  .sqlfluffignore  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
dbt/macros/: get_date_range_bounds.sql  get_partitions_to_replace.sql  pypi_package_filter.sql  weeks_in_range.sql
dbt/models/marts/pypi/: _pypi__docs.md  _pypi__models.yml  pypi_package_downloads_per_day.sql  pypi_package_downloads_per_week.sql  pypi_package_downloads_weekly_metrics.sql  pypi_packages.sql
dbt/models/staging/bq_public_data_pypi/: _bq_public_data_pypi__docs.md  _bq_public_data_pypi__models.yml  _bq_public_data_pypi__sources.yml  stg_bq_public_data_pypi__distribution_metadata.sql  stg_bq_public_data_pypi__file_downloads.sql
dbt/scripts/: setup_dev_env.sh  sqlfluff.sh
infra/: Pulumi.cicd.yaml  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  components.py  config.py  pyproject.toml  requirements.txt  utils.py
infra/templates/: cloud-init.yml  pulumi-esc-gcp.yml
litestream/: litestream.yml
publish/: main.py  notebook.py  pyproject.toml
scripts/: restore_db.sh  sync.sh  update_service.sh
