[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]
