[project]
name = "infra"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.4",
    "pip>=24.3.1",
    "pulumi-cloudinit>=1.4.8",
    "pulumi-digitalocean>=4.34.0",
    "pulumi-docker-build>=0.0.7",
    "pulumi-docker>=4.5.7",
    "pulumi-github>=6.3.2",
    "pulumi-tls>=5.0.9",
    "pulumi>=3.137.0",
]
